[package]
name = "rusted_cart_pole"
version = "0.1.0"
authors = ["Olli Huotari <olli.huotari@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# # name = "rusted_cart_pole"
# crate-type = ["cdylib"]

# not by default
[profile.release]
debug = true


[dependencies]
# ferris-says = "0.1"
quicksilver = "*"
rand = "*"
# plotters = "*"
# plotters = {version = "*", features = ["piston"] }
# plotters = {version = "*", default_features = false, features = ["piston"] }
plotters = {path = "../plotters", version = "*", default_features = false, features = ["piston"] }
# plotters = {path = "../..", default_features = false, features = ["piston"]}
piston = "*"
systemstat = "0.1.4"
piston_window = "0.105.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "*"


# [dependencies.web-sys]
# version = "0.3.29"
# features = [ "console" ]

#[target."cfg(debug_assertions)".dependencies]
#console_error_panic_hook = "0.1.5"

