[package]
name = "rusted_cart_pole"
version = "0.1.0"
authors = ["Olli Huotari <olli.huotari@iki.fi>"]
edition = "2018"
description = "Example of using Rust code in Python and Wasm/JS for machine learning"
homepage = "https://github.com/holli/rusted_cart_pole"
repository = "https://github.com/holli/rusted_cart_pole"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
lto = true

[dependencies]
wasm-bindgen = "*"
wee_alloc = "*"
web-sys = { version = "*", features = ["HtmlCanvasElement"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
plotters = {git = "https://github.com/holli/plotters", branch = "pub_piston_backend", version = "*", default_features = false, features = ["piston"] }
piston = "*"
piston_window = "*"
rand = "0.7.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
plotters = {git = "https://github.com/holli/plotters", branch = "pub_piston_backend", version = "*", default_features = false }
rand = {version = "0.7.2", features = ["wasm-bindgen"] }
wasm-bindgen = "*"
web-sys = { version = "*", features = ["console"] }
console_error_panic_hook = { version = "0.1.1" } # increases size, maybe avoid in production

